# covid-info

./: .dockerignore  .gitignore  CHANGES.rst  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt
covid_info/: app.py  data_process.py
covid_info/templates/: 404.html  base.html  index.html  map.html  nav.html
covid_test_loc/: app.py  data_process.py
covid_test_loc/templates/: base.html  covid_map.html  index.html  mycharts.html
data/: Inoculation_point.xlsx  data.xlsx  医疗卫生机构及公共场所.csv  医疗卫生机构及公共场所.json  医疗卫生机构及公共场所采样点.csv  医疗卫生机构及公共场所采样点.json  愿检尽检.csv  愿检尽检.json  重点人群采样点.csv  重点人群采样点.json
tests/: test_config.py  test_covid_test_loc.py
